<resources>
  <string name="app_name">UrTruck</string>
</resources>
